@@ -4,6 +4,8 @@
 	  subcommand.
 	* Implement support for resolving symbolic links inside a root directory
 	  (--root=...) when saving the dump.
+	* Don't print a (red) info message that email failed if both
+	  KDUMP_SMTP_SERVER and KDUMP_NOTIFICATION_TO are empty.
 
 2008-11-01  Bernhard Walle <bwalle@suse.de>
 
